<resources>
    <string name="app_name">MelmyPrototype</string>
    <string name="menu_mission_list">전체 미션 보기</string>
    <string name="menu_mission_history">미션 수행 일지</string>
    <string name="add_mission_text_complete">완료</string>
    <string name="mission_name">미션 이름</string>
    <string name="day_of_week_picker_monday">월</string>
    <string name="day_of_week_picker_tuesday">화</string>
    <string name="day_of_week_picker_wednesday">수</string>
    <string name="day_of_week_picker_thursday">목</string>
    <string name="day_of_week_picker_friday">금</string>
    <string name="day_of_week_picker_saturday">토</string>
    <string name="day_of_week_picker_sunday">일</string>
    <string name="day_of_week_picker_monday_full">월요일</string>
    <string name="day_of_week_picker_tuesday_full">화요일</string>
    <string name="day_of_week_picker_wednesday_full">수요일</string>
    <string name="day_of_week_picker_thursday_full">목요일</string>
    <string name="day_of_week_picker_friday_full">금요일</string>
    <string name="day_of_week_picker_saturday_full">토요일</string>
    <string name="day_of_week_picker_sunday_full">일요일</string>
    <string name="mission_type">미션 유형</string>
    <string name="mission_type_time">시간 형 미션</string>
    <string name="mission_type_count">횟수 형 미션</string>
    <string name="total_goal">전체 목표</string>
    <string name="daily_goal">일일 목표</string>
    <string name="unit_count">회</string>
    <string name="unit_minute">분</string>
    <string name="unit_hour">시간</string>
    <string name="all_mission_list">미션 리스트</string>
    <string name="add_mission">미션 추가</string>
    <string name="daily_achievement_rate">오늘의 달성도</string>
    <string name="daily_mission">오늘의 미션</string>
    <string name="daily_complete_percent">%d%%</string>
    <string name="empty_mission_list">미션이 없습니다</string>
    <string name="empty_completed_mission_list">완료된 미션이 없습니다</string>
    <string name="empty_active_mission_list">진행중인 미션이 없습니다</string>
    <string name="hide_completed_missions">완료된 미션 숨기기</string>
    <string name="sort">정렬</string>
    <string name="sort_by_day_of_week">요일 별로</string>
    <string name="sort_by_completion_rate">달성도 순으로</string>
    <string name="sort_by_name">이름 순으로</string>
    <string name="new_mission">미션 등록</string>
    <string name="filter">필터</string>
    <string name="filter_all">전체</string>
    <string name="filter_active">진행중</string>
    <string name="filter_completed">완료</string>
    <string name="mission_add">미션 추가</string>
    <string name="mission_title">미션 이름</string>
    <string name="remove">삭제</string>
    <string name="mission_remove_dialog_title">미션을 영구적으로 삭제하시겠습니까?</string>
    <string name="mission_remove_all_dialog_title">모든 미션을 영구적으로 삭제하시겠습니까?</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="menu_mission_list_by_day_of_week">요일 별 미션 목록</string>
    <string name="mission_list_by_day_of_week">요일 별 미션 목록</string>
    <string name="missions_history">미션 수행 일지</string>
    <string-array name="mission_types">
        <item>@string/mission_type_count</item>
        <item>@string/mission_type_time</item>
    </string-array>
    <string-array name="days_of_week_full">
        <item>@string/day_of_week_picker_monday_full</item>
        <item>@string/day_of_week_picker_tuesday_full</item>
        <item>@string/day_of_week_picker_wednesday_full</item>
        <item>@string/day_of_week_picker_thursday_full</item>
        <item>@string/day_of_week_picker_friday_full</item>
        <item>@string/day_of_week_picker_saturday_full</item>
        <item>@string/day_of_week_picker_sunday_full</item>
    </string-array>

    <string name="format_start_date" note="YEAR,MONTH,DATE 순서">%s-%s-%s 시작</string>
    <string name="detail_description_low_percent">천리길도 한걸음부터라는 말이 있죠?\n조금만 더 힘을 내자구요!! 아자아자 (ง •̀_•́)ง</string>
    <string name="sort_by_created_date">시작일 순으로</string>
    <string name="chronometer_format">HH:MM:SS</string>

    <string name="comming_soon">준비중인 기능입니다.</string>
    <string name="menu_information">정보/문의</string>
    <string name="menu_review">평점과 리뷰쓰기</string>
    <string name="menu_report">버그 신고 및 제안</string>
    <string name="menu_version">버전 확인</string>
    <string name="menu_etc">기타</string>
    <string name="menu_term_service">서비스 이용약관</string>
    <string name="menu_term_private">개인정보 처리방침</string>
    <string name="menu_open_source">오픈소스 라이센스</string>

    <!-- 버그 제보 -->
    <string name="report_body">OS Version : %s\nApp Version : %s\n\n\n</string>

    <!-- 버전 체크 -->
    <string name="error_common">알수없는 에러가 발생했습니다.</string>
    <string name="title_version_check">버전 확인</string>
    <string name="action_update">업데이트</string>
    <string name="current_version">현재버전</string>
    <string name="latest_version">최신버전</string>
    <string name="message_network_not_enabled">네트워크가 불안정합니다</string>
    <string name="message_version_latest">최신버전입니다</string>
    <string name="common_loading">로딩중…</string>
    <string name="mission_completed">미션을 달성했습니다!</string>
    <string name="remove_all">모두 삭제</string>
    <string name="edit">수정</string>

    <!-- 요일별 미션 목록 -->
    <string name="show_all">전체보기</string>
    <string-array name="tab_indicator_week">
        <item>@string/show_all</item>
        <item>@string/day_of_week_picker_monday_full</item>
        <item>@string/day_of_week_picker_tuesday_full</item>
        <item>@string/day_of_week_picker_wednesday_full</item>
        <item>@string/day_of_week_picker_thursday_full</item>
        <item>@string/day_of_week_picker_friday_full</item>
        <item>@string/day_of_week_picker_saturday_full</item>
        <item>@string/day_of_week_picker_sunday_full</item>
    </string-array>
</resources>
