<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mission_title_edit_text_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mission_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mission_name" />
    </com.google.android.material.textfield.TextInputLayout>


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:entries="@array/mission_types"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mission_title_edit_text_container" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/total_goal_count_edit_text_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="0dp"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/vertical_barrier_total_gaol"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/total_goal_count_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/total_goal" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/vertical_barrier_total_gaol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:layout_constraintEnd_toStartOf="@id/goal_count_text_view"
        app:layout_constraintStart_toEndOf="@id/total_goal_count_edit_text_container" />

    <TextView
        android:id="@+id/goal_count_text_view"
        android:layout_width="80dp"
        android:layout_height="@dimen/text_view_height"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/goal_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vertical_barrier_total_gaol"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />


    <LinearLayout
        android:id="@+id/day_of_week_picker"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_goal_count_edit_text_container">

        <TextView
            android:id="@+id/picker_item_monday"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/day_of_week_picker_monday" />

        <TextView
            android:id="@+id/picker_item_tuesday"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/day_of_week_picker_tuesday" />

        <TextView
            android:id="@+id/picker_item_wednesday"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/day_of_week_picker_wednesday" />

        <TextView
            android:id="@+id/picker_item_thursday"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/day_of_week_picker_thursday" />

        <TextView
            android:id="@+id/picker_item_friday"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/day_of_week_picker_friday" />

        <TextView
            android:id="@+id/picker_item_saturday"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/day_of_week_picker_saturday" />

        <TextView
            android:id="@+id/picker_item_sunday"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/day_of_week_picker_sunday" />
    </LinearLayout>

    <TextView
        android:id="@+id/complete_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/add_mission_text_complete"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>